--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,14 @@
             <version>6.6.6</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.pdfbox/pdfbox -->
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>2.0.26</version>
+        </dependency>
+
     </dependencies>
 
 </project>
